--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,21 @@
 /* global */
+/* html {
+  box-sizing: border-box;
+} */
+
+*,
+*::before,
+*::after {
+  /*   outline: 1px solid rgb(250, 195, 175);
+  background-color: rgba(0, 255, 106, 0.1); */
+}
+
+.container {
+  width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+/* global */
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -11,6 +28,7 @@
 }
 
 .page {
+  margin: 0;
   background-color: var(--background-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
@@ -18,6 +36,8 @@
 }
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .link {
@@ -29,18 +49,32 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 .title {
   color: var(--title-text-color);
+  margin: inherit;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.flex {
+  display: flex;
 }
 
 /*    logo */
 .logo {
+  padding: 24px 0;
+  margin-right: 93px;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  display: inline-block;
 }
 .logo-black {
   color: var(--logo-black-color);
@@ -48,9 +82,27 @@
 .logo-white {
   color: var(--logo-white-color);
 }
+
 /* Navigation */
+.header {
+  border-bottom: 2px;
+  border-color: #188ce8;
+}
+.nav-section {
+  display: flex;
+  margin-right: auto;
+}
+.menu-nav {
+  display: flex;
+}
+.menu-nav .nav-item:not(:last-child) {
+  margin-right: 50px;
+}
 
 .menu-nav .link {
+  display: block;
+  padding: 32px 0;
+
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -65,7 +117,17 @@
   color: var(--accent-color);
 }
 
+.adress-nav {
+  display: flex;
+}
+.adress-nav .nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .adress-nav .link {
+  display: block;
+  padding: 32px 0;
+
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -76,23 +138,41 @@
 .adress-nav .link:focus {
   color: var(--accent-color);
 }
+.header {
+  border: 1px solid #ececec;
+}
 
 /* Hero */
 .hero {
   background-color: #2f303a;
+  text-align: center;
+  padding: 200px 0;
+}
+.hero .container {
+  width: 696px;
 }
 .hero-title {
   color: var(--main-title-text-color);
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 .portfolio-title {
-  color: var(--title-text-color);
-  display: none;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 /* Hero Button */
 .hero .button {
@@ -111,6 +191,14 @@
 }
 
 /* Filter Button */
+.filter-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
 .filter-list .button {
   color: var(--title-text-color);
   background-color: var(--background-color);
@@ -130,48 +218,140 @@
   background-color: var(--accent-color);
 }
 
-/* features */
-.section-title.feature {
-  display: none;
+/* Work */
+.work {
+  padding-bottom: 94px;
 }
+.work .list {
+  display: flex;
+  justify-content: space-between;
+}
+/* Hidden Title H2 */
+.section-title.feature {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/* features */
+.feature-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.feature-selection {
+  padding: 94px 0;
+}
+
 .feature-list .title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .feature-list .feature-item {
+  width: 270px;
+
   font-size: 14px;
   line-height: 1.71;
+  display: inline-block;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* Our Team */
 .team-section {
   background: #f5f4fa;
+  padding: 94px 0;
+}
+
+.team-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.team-photo {
+  margin-bottom: 30px;
 }
 .team-list .title {
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  margin-bottom: 10px;
 }
 .team-list .position {
+  text-align: center;
   font-size: 16px;
   line-height: 1.19;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .team-card {
   background-color: var(--background-color);
 }
-/* Prewiew Work */
+
+.card-sighn {
+  padding: 30px 0;
+}
+
+/* GALERY */
+.prewiew-card-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.prewiew-card-list .list-item {
+  width: 370px;
+  margin-top: 30px;
+  margin-right: 30px;
+  border: 1px solid #eeeeee;
+}
+.prewiew-card-list .list-item:nth-child(3n) {
+  margin-right: 0;
+}
+.prewiew-card-list .list-item:nth-child(-n + 3) {
+  margin-top: 0;
+}
+.prewiew-card-sighn {
+  display: block;
+  padding: 20px 24px;
+}
 .prewiew-work-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .prewiew-work-type {
   font-size: 16px;
   line-height: 1.88x;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* galery */
+.galery-section {
+  padding: 94px 0;
 }
 /* footer */
+.footer {
+  background-color: #2f303a;
+  font-size: 14px;
+  line-height: 1.71;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer .logo {
+  margin-bottom: 20px;
+}
 .adress-text {
   color: #ffffff;
 }
@@ -179,20 +359,25 @@
 .tel-footer {
   color: rgba(255, 255, 255, 0.6);
 }
-
 .list-item .title {
   color: var(--title-text-color);
 }
-/* Footer */
-.footer {
-  background-color: #2f303a;
-  font-size: 14px;
-  line-height: 1.71;
-}
-
 .footer-nav .link:hover,
 .footer-nav .link:focus {
   color: var(--accent-color);
+}
+.adress-text,
+.mail-footer,
+.tel-footer {
+  display: block;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+}
+.footer-nav-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 .adress {
   font-style: normal;
