--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,9 @@ img {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
+  padding: 10px 32px;
+  border: 0;
+  border-radius: 4px;
 }
 .hero .button:hover,
 .hero .button:focus {
@@ -199,15 +202,20 @@ img {
 .filter-item:not(:last-child) {
   margin-right: 8px;
 }
+
 .filter-list .button {
   color: var(--title-text-color);
-  background-color: var(--background-color);
+  background-color: #f5f4fa;
   cursor: pointer;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  padding: 6px 24px;
+  border: 0;
+  border-radius: 4px;
 }
+
 .filter-list .button:hover,
 .filter-list .button:focus {
   color: var(--button-text-color);
