--- a/css/styles.css
+++ b/css/styles.css
@@ -226,14 +226,6 @@ img {
   background-color: var(--accent-color);
 }
 
-/* Work */
-.work {
-  padding-bottom: 94px;
-}
-.work .list {
-  display: flex;
-  justify-content: space-between;
-}
 /* Hidden Title H2 */
 .section-title.feature {
   position: absolute;
@@ -251,9 +243,13 @@ img {
 /* features */
 .feature-list {
   display: flex;
-  justify-content: space-between;
 }
-
+.feature-item {
+  margin: 0 30px 0 0;
+}
+.feature-item:last-child {
+  margin-right: 0;
+}
 .feature-selection {
   padding: 94px 0;
 }
@@ -265,14 +261,25 @@ img {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-.feature-list .feature-item {
+.feature-list .feature-par {
   width: 270px;
-
   font-size: 14px;
   line-height: 1.71;
   display: inline-block;
-  margin-top: 0;
-  margin-bottom: 0;
+}
+
+/* Work */
+.work {
+  padding-bottom: 94px;
+}
+.work .list {
+  display: flex;
+}
+.work-img-item {
+  margin-right: 30px;
+}
+.work-img-item:last-child {
+  margin-right: 0;
 }
 
 /* Our Team */
@@ -283,7 +290,6 @@ img {
 
 .team-list {
   display: flex;
-  justify-content: space-between;
 }
 
 .team-photo {
@@ -305,6 +311,10 @@ img {
 }
 .team-card {
   background-color: var(--background-color);
+  margin-right: 30px;
+}
+.team-card:last-child {
+  margin-right: 0;
 }
 
 .card-sighn {
@@ -321,6 +331,7 @@ img {
   margin-top: 30px;
   margin-right: 30px;
   border: 1px solid #eeeeee;
+  border-top: 0;
 }
 .prewiew-card-list .list-item:nth-child(3n) {
   margin-right: 0;
@@ -345,7 +356,6 @@ img {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* galery */
 .galery-section {
   padding: 94px 0;
 }
@@ -357,7 +367,16 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer .logo {
+.logo-footer {
+  margin-right: 93px;
+  color: var(--accent-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  display: inline-block;
+}
+.logo-footer {
   margin-bottom: 20px;
 }
 .adress-text {
