--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
 *,
 *::before,
 *::after {
-  /*   outline: 1px solid rgb(250, 195, 175);
-  background-color: rgba(0, 255, 106, 0.1); */
+  outline: 1px solid rgb(250, 195, 175);
+  background-color: rgba(0, 255, 106, 0.1);
 }
 
 .container {
