--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,10 @@
 /* global */
-/* html {
-  box-sizing: border-box;
-} */
 
 *,
 *::before,
 *::after {
-  outline: 1px solid rgb(250, 195, 175);
-  background-color: rgba(0, 255, 106, 0.1);
+  /* outline: 1px solid rgb(250, 195, 175);
+  background-color: rgba(0, 255, 106, 0.1); */
 }
 
 .container {
@@ -266,6 +263,7 @@ img {
   font-size: 14px;
   line-height: 1.71;
   display: inline-block;
+  margin: 0;
 }
 
 /* Work */
@@ -292,9 +290,9 @@ img {
   display: flex;
 }
 
-.team-photo {
+/* .team-photo {
   margin-bottom: 30px;
-}
+} */
 .team-list .title {
   text-align: center;
   font-weight: 500;
@@ -330,8 +328,6 @@ img {
   width: 370px;
   margin-top: 30px;
   margin-right: 30px;
-  border: 1px solid #eeeeee;
-  border-top: 0;
 }
 .prewiew-card-list .list-item:nth-child(3n) {
   margin-right: 0;
@@ -340,8 +336,9 @@ img {
   margin-top: 0;
 }
 .prewiew-card-sighn {
-  display: block;
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
 }
 .prewiew-work-title {
   font-weight: 700;
@@ -352,7 +349,7 @@ img {
 }
 .prewiew-work-type {
   font-size: 16px;
-  line-height: 1.88x;
+  line-height: 1.88;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -368,15 +365,12 @@ img {
   padding-bottom: 60px;
 }
 .logo-footer {
-  margin-right: 93px;
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   display: inline-block;
-}
-.logo-footer {
   margin-bottom: 20px;
 }
 .adress-text {
